--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,8 @@
 }
 
 body{
-    height: 100vh;
-    width: 100vw;
+    height: 100vh; /* Altura */
+    width: 100vw; /* largura */
     display: flex;
     justify-content: center; /*eixo horizontal*/
     align-items: center; /*eixo vertical*/ 
@@ -51,6 +51,10 @@ body{
 
 }
 
+.input-cidade:hover{
+    color: #ffffff;
+}
+
 .botao-busca{
     border: none;
     outline: none;
@@ -60,6 +64,10 @@ body{
     background-color: #8a8a8a2b;
     cursor: pointer;
     float: right;
+}
+
+.botao-busca:hover {
+    background-color: #ffffff;
 }
 
 .img-busca{
